# omni-plotter

./: .gitignore  .gitmodules  LICENSE  README.en.md  Readme.ja.md  meson.build
live-sample/: GC-WindWaker.xml  N64-Sample.xml  NintendoSwitch-Sample.xml  msgpackdummy.n64.py  msgpackdummy.ngc.py
record-sample/GC-WindWaker.xml-from-20220525-13h59m35.899s/: index.xml
record-sample/GC-WindWaker.xml-from-20220525-13h59m35.899s/data/: 00000180F995A64A.mpack  00000180F995FC99.mpack  00000180F996516D.mpack  00000180F996A788.mpack  00000180F996FCCF.mpack  00000180F997524F.mpack  00000180F997A749.mpack  00000180F997FD4C.mpack  00000180F998532E.mpack  00000180F998A88B.mpack  00000180F998FE89.mpack  00000180F99954C9.mpack  00000180F999AB30.mpack  00000180F99A00C5.mpack  00000180F99A5753.mpack  00000180F99AAD6B.mpack  00000180F99B02AF.mpack  00000180F99B57A8.mpack  00000180F99BADC3.mpack  00000180F99C02C0.mpack  00000180F99C590B.mpack  00000180F99CAED7.mpack  00000180F99D040E.mpack  00000180F99D5909.mpack  00000180F99DAF12.mpack  00000180F99E0528.mpack  00000180F99E5BA1.mpack  00000180F99EB0CB.mpack  00000180F99F06E4.mpack
record-sample/GC-WindWaker.xml-from-20220526-22h17m22.838s/: index.xml
record-sample/N64-Sample.xml-from-20220525-14h20m25.087s/: index.xml
resource/: gresource.xml
resource/ui/: main.ui  toggler.ui
src/: main.vala  sample.ui
src/context/: RecordStorage.vala
src/myapp/: ChartGridBox.vala  MainApp.vala  PlotToggler.vala
src/protocol/: MpTimelineReceiver.vala  PacketRecorder.vala  ProtocolReceiver.vala
src/utils/: RGBAUtils.vala  XmlUtils.vala
(+46 files in other folders)
